# cpp-laboratory-template

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/CppTemplate/: ExampleClass.hpp
scripts/: setup.sh
src/: ExampleClass.cpp
tests/: CMakeLists.txt  ExampleClass_test.cpp
